--- a/src/pipelines/components/scraper_components/pd_speech_extractor_component/fondant_component.yaml
+++ b/src/pipelines/components/scraper_components/pd_speech_extractor_component/fondant_component.yaml
@@ -13,6 +13,8 @@ produces:
     type: "string"
   Profile:
     type: "string"
+  Faction:
+    type: "string"
   Title:
     type: "string"
   Text:
