--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Do not upload all the scraped data
 src/pipelines/fondant-artifacts
-
+tmp/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
